FFmpegfs NEWS

FFmpegfs has been added to Debian 10 Buster Backports, Debian 11 Bullseye and
Ubuntu 20.04. See INSTALL.md "Installation from repository" for details.

Important changes in 1.99 (2020-04-XX)

* Support:
* Feature:
* Bugfix: Issue #59 - *.m3u8 files were tried to be transcoded while they should simply be
          passed through. Added to ignore and pass through list.
* Bugfix: Issue #57 - Correctly expand tilde when ~/ is used, for example in
          "ffmpegfs --logfile=~/ffmpegfs.log".
* Bugfix: Issue #60 - Reopen cache file after it has been closed so that image frames can
          be accessed after the file has been fully decoded.

Important changes in 1.98 (2020-04-15)

* Cool, there's an online revivew on Linux Uprising, you can read it here:
  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html
* Support: FFmpegfs has recently been added to Debian sid and Debian Bullseye. It is also
           available in Ubuntu 20.04 and Linux distributions based on it.
* Feature: HLS: Introducing direct segment access. If e.g. segment no. 333 is opened,
           ffmpegfs will seek to this position and start transcoding the segment
           immediately. *Please note that this feature is still experimental and may
           produce unexpected results.*
* Support: No longer creating a user/group ffmpegfs while "make install". The user is not really
           required, just bloats the system's user database.
* Support: Reduced quality of the test video to make the distribution archive slimmer. A full
           HD (1920x1280) video at 60 frames per second was a bit of an overkill anyway.
           720x400 at 30 fps should be enough for everybody.
* Feature: Cache dir changed to ${XDG_CACHE_HOME:-~/.cache}/ffmpegfs (as specified in the XDG
           Base Directory Specification). Falls back to ${HOME:-~/.cache}/ffmpegfs if not
           defined. Only if executed with root privileges, "/var/cache/ffmpegfs" will be used